--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <img src="images/barfoodies-cuenco-vacio.png">
                         </figure>
        
-                <p>Nuestro cuenco está vacio, estamos trabajando para llenarlo. Para más información escribenos a:</p>
+                <p>Nuestro cuenco está vacio, estamos trabajando para llenarlo. Para más información escríbenos a:</p>
                 <br>
                 <a href="mailto:info@barfoodies.com">info@barfoodies.es</a>
             </div>
