--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <div class="container">
         <div class="columns">
             <div class="column is-12">
-                <h1>Barfoodies</h1>
-                <h2>NUTRICIONISTAS PARA PEQUEÑOS CARNÍVOROS</h2>
              
                         <figure class="image bowl">
-                            <img src="images/barfoodies-cuenco-vacio.png">
+                            <img src="images/barfoodieslogo.png">
                         </figure>
        
                 <p>Nuestro cuenco está vacio, estamos trabajando para llenarlo. Para más información escríbenos a:</p>
